--- a/main.html
+++ b/main.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Bold Highlighter</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mouseover Highlight</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <p>
-    [<a href="#" onmouseover="highlight()" onmouseout="return_normal()">On mouse over here bold words of the following paragraph will be highlighted</a>]
-  </p>
-
-  <p>
-    <strong>AccioJob</strong> is an <strong>ed-tech startup</strong> run by IIT Delhi Alumni that provides a comprehensive state-of-the-art learning platform for <strong>Full Stack Web Development</strong>. Our industry-relevant curriculum is taught by top tech instructors and mentors, and our students have gone on to work at leading tech companies like <strong>Amazon</strong>, <strong>Salesforce</strong>, and <strong>Walmart</strong>, among others. With job placement opportunities at <strong>300+</strong> top tech partner companies, we have placed <strong>1000+</strong> students in 2022 itself at an average salary of <strong>8.3 LPA</strong>.
+    This is an <a href="#" id="hover-link">example to-do app</a> with some
+    <strong>important</strong>, <strong>bold</strong>, and
+    <strong>highlighted</strong> words.
   </p>
 
   <script src="script.js"></script>
